--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^12.4.10",
     "immer": "^10.1.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
